--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   intl: ^0.20.2
   firebase_storage: ^12.4.5
   cloud_functions: ^5.1.3
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
