--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,15 @@ dependencies:
   firebase_storage: ^12.4.5
   cloud_functions: ^5.1.3
   shared_preferences: ^2.5.4
+  firebase_messaging: ^15.2.10
+  flutter_local_notifications: ^20.1.0
+  syncfusion_flutter_pdfviewer: ^32.2.7
+  path_provider: ^2.1.5
+  permission_handler: ^12.0.1
+  pdf: ^3.11.3
+  printing: ^5.14.2
+  rxdart: ^0.28.0
+  open_filex: ^4.7.0
 
 dev_dependencies:
   flutter_test:
